@@ -171,6 +171,19 @@ name|lucene
 operator|.
 name|util
 operator|.
+name|TestUtil
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
 name|TimeUnits
 import|;
 end_import
@@ -231,17 +244,6 @@ literal|"Memory"
 block|,
 literal|"Direct"
 block|}
-argument_list|)
-annotation|@
-name|TimeoutSuite
-argument_list|(
-name|millis
-operator|=
-literal|4
-operator|*
-name|TimeUnits
-operator|.
-name|HOUR
 argument_list|)
 annotation|@
 name|Monster
@@ -353,6 +355,14 @@ operator|.
 name|OpenMode
 operator|.
 name|CREATE
+argument_list|)
+operator|.
+name|setCodec
+argument_list|(
+name|TestUtil
+operator|.
+name|getDefaultCodec
+argument_list|()
 argument_list|)
 argument_list|)
 decl_stmt|;
