@@ -176,6 +176,21 @@ name|util
 operator|.
 name|LuceneTestCase
 operator|.
+name|Monster
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|LuceneTestCase
+operator|.
 name|SuppressSysoutChecks
 import|;
 end_import
@@ -787,6 +802,15 @@ operator|||
 name|LuceneTestCase
 operator|.
 name|INFOSTREAM
+operator|||
+name|target
+operator|.
+name|isAnnotationPresent
+argument_list|(
+name|Monster
+operator|.
+name|class
+argument_list|)
 operator|||
 name|target
 operator|.
